<resources>
    <string name="app_name">My App Protfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps! </string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="materialize">BACKON READER</string>
    <string name="capston">CAPSTONE:MY OWN APP</string>


</resources>
