<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffdfeaf1"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"

        android:textColor="#345b6e"
        android:textSize="50px"
        android:id="@+id/textView" />

    <Button
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/streamer"
        android:background="#F08C35"
        android:textColor="#FFFFFF"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView"

        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="400px"
        android:layout_height="wrap_content"

        android:textColor="#FFFFFF"
        android:background="#F08C35"
        android:text="@string/super_duo1"
        android:id="@+id/duo1"
        android:layout_below="@+id/streamer"
        android:layout_alignLeft="@+id/streamer"
        android:layout_alignStart="@+id/streamer"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="400px"
        android:layout_height="wrap_content"

        android:textColor="#FFFFFF"
        android:background="#F08C35"
        android:text="@string/super_duo2"
        android:id="@+id/duo2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/duo1"
        android:layout_alignLeft="@+id/streamer" />

    <Button
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/terminator"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/duo2"
        android:layout_alignLeft="@+id/streamer" />

    <Button
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/materialize"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/terminator"
        android:layout_alignLeft="@+id/streamer" />

    <Button
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:text="@string/capston"
        android:textColor="#FFFFFF"
        android:background="#E91E63"
        android:id="@+id/capston"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/materialize"
        android:layout_alignLeft="@+id/streamer"

        />

</RelativeLayout>
